# nixdoc

./: .gitattributes  .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
nix/: shell.nix
src/: error.rs  ffi.rs  lib.rs  parser.rs  section.rs
src/tests/: parser.rs
tests/: corpus.rs  doc_comment.rs  pesto_compat.rs  serde.rs
tests/fixtures/doc_comments/: lists.foldr.expect  lists.foldr.txt  lists.singleton.expect  lists.singleton.txt  trivial.const.expect  trivial.const.txt  trivial.flip.expect  trivial.flip.txt  trivial.id.expect  trivial.id.txt  trivial.mergeAttrs.expect  trivial.mergeAttrs.txt  trivial.pipe.expect  trivial.pipe.txt
