[package]
name = "nixdoc"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
description = "Parser for Nixdoc documentation comments"
repository = "https://github.com/feel-co/nixdoc"
homepage = "https://github.com/feel-co/nixdoc"
keywords = ["nix", "nixdoc", "documentation", "parser"]
categories = ["parsing", "text-processing"]
rust-version = "1.91.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
thiserror = "2.0.18"

[dev-dependencies]
expect-test = "1.5.1"

[features]
default = []
serde = ["dep:serde"]

[dependencies.serde]
version = "1.0.228"
features = ["derive"]
optional = true
